--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,13 @@
     padding-right: 77px;
     padding-bottom: 32px;
     padding-left: 77px;
+    padding-top: 32px;
     font-weight: 700;
     line-height: 20px;
     text-align: center;
     width: 150px;
-    height: 30px;
-   
-    
+    height: 18px;
+
     
     
 }
